dll/PacDrive.h

enum DeviceType
{
	DEVICETYPE_UNKNOWN,
	DEVICETYPE_PACDRIVE,
	DEVICETYPE_UHID,
	DEVICETYPE_BLUEHID,
	DEVICETYPE_NANOLED,
	DEVICETYPE_PACLED64,
	DEVICETYPE_IPACULTIMATEIO,
	DEVICETYPE_SERVOSTIK,
	DEVICETYPE_USBBUTTON
};
typedef VOID (__stdcall *USBDEVICE_ATTACHED_CALLBACK)(INT id);
typedef VOID (__stdcall *USBDEVICE_REMOVED_CALLBACK)(INT id);
PACDRIVE_API BOOL __stdcall Pac64SetLEDFadeTime(INT id, BYTE fadeTime);
PACDRIVE_API BOOL __stdcall Pac64SetLEDFlashSpeeds(INT id, BYTE flashSpeed);
PACDRIVE_API BOOL __stdcall Pac64SetLEDFlashSpeed(INT id, INT port, BYTE flashSpeed);
PACDRIVE_API BOOL __stdcall Pac64StartScriptRecording(INT id);
PACDRIVE_API BOOL __stdcall Pac64StopScriptRecording(INT id);
PACDRIVE_API BOOL __stdcall Pac64SetScriptStepDelay(INT id, BYTE stepDelay);
PACDRIVE_API BOOL __stdcall Pac64RunScript(INT id);
PACDRIVE_API BOOL __stdcall Pac64ClearFlash(INT id);
PACDRIVE_API BOOL __stdcall Pac64SetDeviceId(INT id, INT newId);
PACDRIVE_API INT __stdcall PacGetDeviceType(INT id);
PACDRIVE_API INT __stdcall PacGetVendorId(INT id);
PACDRIVE_API INT __stdcall PacGetProductId(INT id);
PACDRIVE_API INT __stdcall PacGetVersionNumber(INT id);
PACDRIVE_API VOID __stdcall PacGetVendorName(INT id, PWCHAR sVendorName);
PACDRIVE_API VOID __stdcall PacGetProductName(INT id, PWCHAR sProductName);
PACDRIVE_API VOID __stdcall PacGetSerialNumber(INT id, PWCHAR sSerialNumber);
PACDRIVE_API VOID __stdcall PacGetDevicePath(INT id, PWCHAR sDevicePath);
PACDRIVE_API BOOL __stdcall PacProgramUHid(INT id, PCHAR sFilePath);
PACDRIVE_API BOOL __stdcall PacSetServoStik4Way();
PACDRIVE_API BOOL __stdcall PacSetServoStik8Way();
PACDRIVE_API BOOL __stdcall USBButtonConfigurePermanent(INT id, PBYTE data);
PACDRIVE_API BOOL __stdcall USBButtonConfigureTemporary(INT id, PBYTE data);
PACDRIVE_API BOOL __stdcall USBButtonConfigureColor(INT id, BYTE red, BYTE green, BYTE blue);
PACDRIVE_API BOOL __stdcall USBButtonGetState(INT id, PBOOL state);