C#/PacDrive.cs


		[DllImport("PacDrive64.dll", EntryPoint = "Pac64SetLEDFadeTime", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool Pac64SetLEDFadeTime64(int id, byte fadeTime);

		[DllImport("PacDrive64.dll", EntryPoint = "Pac64SetLEDFlashSpeeds", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool Pac64SetLEDFlashSpeeds64(int id, byte flashSpeed);

		[DllImport("PacDrive64.dll", EntryPoint = "Pac64SetLEDFlashSpeed", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool Pac64SetLEDFlashSpeed64(int id, int port, byte flashSpeed);

		[DllImport("PacDrive64.dll", EntryPoint = "Pac64StartScriptRecording", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool Pac64StartScriptRecording64(int id);

		[DllImport("PacDrive64.dll", EntryPoint = "Pac64StopScriptRecording", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool Pac64StopScriptRecording64(int id);

		[DllImport("PacDrive64.dll", EntryPoint = "Pac64SetScriptStepDelay", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool Pac64SetScriptStepDelay64(int id, byte stepDelay);

		[DllImport("PacDrive64.dll", EntryPoint = "Pac64RunScript", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool Pac64RunScript64(int id);

		[DllImport("PacDrive64.dll", EntryPoint = "Pac64ClearFlash", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool Pac64ClearFlash64(int id);

		[DllImport("PacDrive64.dll", EntryPoint = "Pac64SetDeviceId", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool Pac64SetDeviceId64(int id, int newId);

		[DllImport("PacDrive64.dll", EntryPoint = "PacGetDeviceType", CallingConvention = CallingConvention.StdCall)]
		private static extern int PacGetDeviceType64(int id);

		[DllImport("PacDrive64.dll", EntryPoint = "PacGetVendorId", CallingConvention = CallingConvention.StdCall)]
		private static extern int PacGetVendorId64(int id);

		[DllImport("PacDrive64.dll", EntryPoint = "PacGetProductId", CallingConvention = CallingConvention.StdCall)]
		private static extern int PacGetProductId64(int id);

		[DllImport("PacDrive64.dll", EntryPoint = "PacGetVersionNumber", CallingConvention = CallingConvention.StdCall)]
		private static extern int PacGetVersionNumber64(int id);

		[DllImport("PacDrive64.dll", EntryPoint = "PacGetVendorName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		private static extern void PacGetVendorName64(int id, StringBuilder vendorName);

		[DllImport("PacDrive64.dll", EntryPoint = "PacGetProductName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		private static extern void PacGetProductName64(int id, StringBuilder productName);

		[DllImport("PacDrive64.dll", EntryPoint = "PacGetSerialNumber", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		private static extern void PacGetSerialNumber64(int id, StringBuilder serialNumber);

		[DllImport("PacDrive64.dll", EntryPoint = "PacGetDevicePath", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		private static extern void PacGetDevicePath64(int id, StringBuilder devicePath);

		[DllImport("PacDrive64.dll", EntryPoint = "PacProgramUHid", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool PacProgramUHid64(int id, StringBuilder fileName);

		[DllImport("PacDrive64.dll", EntryPoint = "PacSetServoStik4Way", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool PacSetServoStik4Way64();

		[DllImport("PacDrive64.dll", EntryPoint = "PacSetServoStik8Way", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool PacSetServoStik8Way64();

		[DllImport("PacDrive64.dll", EntryPoint = "USBButtonConfigurePermanent", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool USBButtonConfigurePermanent64(int id, byte[] dataArray);

		[DllImport("PacDrive64.dll", EntryPoint = "USBButtonConfigureTemporary", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool USBButtonConfigureTemporary64(int id, byte[] dataArray);

		[DllImport("PacDrive64.dll", EntryPoint = "USBButtonConfigureColor", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool USBButtonConfigureColor64(int id, byte red, byte green, byte blue);

		[DllImport("PacDrive64.dll", EntryPoint = "USBButtonGetState", CallingConvention = CallingConvention.StdCall)]
		[return: MarshalAs(UnmanagedType.Bool)]
		private static extern bool USBButtonGetState64(int id, [MarshalAs(UnmanagedType.Bool)] ref bool state);

		private delegate void USBDEVICE_ATTACHED_CALLBACK(int id);
		private delegate void USBDEVICE_REMOVED_CALLBACK(int id);

		public delegate void UsbDeviceAttachedDelegate(int id);
		public delegate void UsbDeviceRemovedDelegate(int id);

		public event UsbDeviceAttachedDelegate OnUsbDeviceAttached = null;
		public event UsbDeviceRemovedDelegate OnUsbDeviceRemoved = null;

		[MarshalAs(UnmanagedType.FunctionPtr)]
		USBDEVICE_ATTACHED_CALLBACK UsbDeviceAttachedCallbackPtr = null;

		[MarshalAs(UnmanagedType.FunctionPtr)]
		USBDEVICE_REMOVED_CALLBACK UsbDeviceRemovedCallbackPtr = null;

		private Control m_ctrl;

		private bool m_is64Bit = false;

		private bool[][] m_LEDState;
		private byte[][] m_LEDIntensity;

		private int m_deviceCount = 0;

		private bool m_disposed = false;

		public PacDrive(Control ctrl)
		{
			m_ctrl = ctrl;
			m_is64Bit = Is64Bit();

			UsbDeviceAttachedCallbackPtr = new USBDEVICE_ATTACHED_CALLBACK(UsbDeviceAttachedCallback);
			UsbDeviceRemovedCallbackPtr = new USBDEVICE_REMOVED_CALLBACK(UsbDeviceRemovedCallback);

			if (m_is64Bit)
				PacSetCallbacks64(UsbDeviceAttachedCallbackPtr, UsbDeviceRemovedCallbackPtr);
			else
				PacSetCallbacks32(UsbDeviceAttachedCallbackPtr, UsbDeviceRemovedCallbackPtr);

			m_LEDState = new bool[MAX_DEVICES][];
			m_LEDIntensity = new byte[MAX_DEVICES][];

			for (int i = 0; i < MAX_DEVICES; i++)
			{
				m_LEDState[i] = new bool[MAX_LEDCOUNT];
				m_LEDIntensity[i] = new byte[MAX_LEDCOUNT];

				for (int j = 0; j < MAX_LEDCOUNT; j++)
				{
					m_LEDState[i][j] = false;
					m_LEDIntensity[i][j] = 0;
				}
			}
		}

		private void UsbDeviceAttachedCallback(int id)
		{
			m_deviceCount++;

			if (OnUsbDeviceAttached != null)
				m_ctrl.BeginInvoke(OnUsbDeviceAttached, id);
		}

		private void UsbDeviceRemovedCallback(int id)
		{
			m_deviceCount--;

			if (OnUsbDeviceRemoved != null)
				m_ctrl.BeginInvoke(OnUsbDeviceRemoved, id);
		}

		public int Initialize()
		{
			m_deviceCount = (m_is64Bit ? PacInitialize64() : PacInitialize32());

			return m_deviceCount;
		}

		public void Shutdown()
		{
			if (m_is64Bit)
				PacShutdown64();
			else
				PacShutdown32();
		}

		public bool SetLEDStates(int id, ushort data)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? PacSetLEDStates64(id, data) : PacSetLEDStates32(id, data));
		}

		public bool SetLEDState(int id, int port, bool state)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? PacSetLEDState64(id, port, state) : PacSetLEDState32(id, port, state));
		}

		public bool SetLEDStates(int id, bool[] stateArray)
		{
			Array.Copy(stateArray, m_LEDState[id], Math.Min(stateArray.Length, m_LEDState[id].Length));

			return SetLEDStates(id);
		}

		public bool SetLEDStates(int id)
		{
			if (id >= m_deviceCount)
				return false;

            bool retVal = false;

            if (IsPacDrive(id))
			{
				ushort dataSend = 0;

				for (int i = 0; i < m_LEDState[id].Length; i++)
					if (m_LEDState[id][i])
						dataSend |= (ushort)(1 << i);

                retVal = (m_is64Bit ? PacSetLEDStates64(id, dataSend) : PacSetLEDStates32(id, dataSend));
			}
			else if (IsPac64(id))
			{
				for (int i = 0; i < m_LEDState[id].Length; i += 8)
				{
					int group = (i / 8) + 1;
					byte dataSend = 0;

					for (int j = 0; j < 8; j++)
						if (m_LEDState[id][i + j])
							dataSend |= (byte)(1 << j);

					retVal = (m_is64Bit ? Pac64SetLEDStates64(id, group, dataSend) : Pac64SetLEDStates32(id, group, dataSend));
				}
			}

            return retVal;
		}

		public bool SetLEDStatesRandom(int id)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64SetLEDStatesRandom64(id) : Pac64SetLEDStatesRandom32(id));
		}

        public bool SetLEDIntensity(int id)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64SetLEDIntensities64(id, m_LEDIntensity[id]) : Pac64SetLEDIntensities32(id, m_LEDIntensity[id]));
		}

		public bool SetLEDIntensity(int id, int port, byte intensity)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64SetLEDIntensity64(id, port, intensity) : Pac64SetLEDIntensity32(id, port, intensity));
		}

		public bool SetLEDFadeTime(int id, byte fadeTime)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64SetLEDFadeTime64(id, fadeTime) : Pac64SetLEDFadeTime32(id, fadeTime));
		}

		public bool SetLEDFlashSpeeds(int id, FlashSpeed flashSpeed)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64SetLEDFlashSpeeds64(id, (byte)flashSpeed) : Pac64SetLEDFlashSpeeds32(id, (byte)flashSpeed));
		}

		public bool SetLEDFlashSpeed(int id, int port, FlashSpeed flashSpeed)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64SetLEDFlashSpeed64(id, port, (byte)flashSpeed) : Pac64SetLEDFlashSpeed32(id, port, (byte)flashSpeed));
		}

		public bool StartScriptRecording(int id)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64StartScriptRecording64(id) : Pac64StartScriptRecording32(id));
		}

		public bool StopScriptRecording(int id)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64StopScriptRecording64(id) : Pac64StopScriptRecording32(id));
		}

		public bool SetScriptStepDelay(int id, byte stepDelay)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64SetScriptStepDelay64(id, stepDelay) : Pac64SetScriptStepDelay32(id, stepDelay));
		}

		public bool RunScript(int id)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64RunScript64(id) : Pac64RunScript32(id));
		}

		public bool ClearFlash(int id)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64ClearFlash64(id) : Pac64ClearFlash32(id));
		}

		public bool SetDeviceId(int id, int newId)
		{
			if (id >= m_deviceCount)
				return false;

			return (m_is64Bit ? Pac64SetDeviceId64(id, newId) : Pac64SetDeviceId32(id, newId));
		}

		public DeviceType GetDeviceType(int id)
		{
			if (id >= m_deviceCount)
				return DeviceType.Unknown;

			return (DeviceType)(m_is64Bit ? PacGetDeviceType64(id) : PacGetDeviceType32(id));
		}

		public int GetVendorId(int id)
		{
			if (id >= m_deviceCount)
				return 0;

			return (m_is64Bit ? PacGetVendorId64(id) : PacGetVendorId32(id));
		}

		public int GetProductId(int id)
		{
			if (id >= m_deviceCount)
				return 0;

			return (m_is64Bit ? PacGetProductId64(id) : PacGetProductId32(id));
		}

		public int GetVersionNumber(int id)
		{
			if (id >= m_deviceCount)
				return 0;
